kubernetes/cluster/smart-home/scrypted/scrypted.yaml
# Service: Scrypted
# Ingress: nvr.brhd.io
# Label: app.kubernetes.io/name: scrypted
---
kind: Service
apiVersion: v1
metadata:
  name: scrypted
  labels:
    app.kubernetes.io/name: scrypted
  namespace: smart-home
spec:
  ports:
    - protocol: TCP
      port: 10443
      targetPort: 10443
  selector:
    app.kubernetes.io/name: scrypted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrypted
  namespace: smart-home
  labels:
    app.kubernetes.io/name: scrypted
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scrypted
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: smart-home
      labels:
        app.kubernetes.io/name: scrypted
    spec:
      restartPolicy: Always
      containers:
        - name: scrypted
          image: koush/scrypted:latest
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 500Mi
          ports:
            - containerPort: 10443
          readinessProbe:
            tcpSocket:
              port: 10443
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 10443
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: scrypted-nvr
              mountPath: /nvr
            - name: scrypted-data
              mountPath: /server/volume
      volumes:
        - name: scrypted-nvr
          persistentVolumeClaim:
            claimName: scrypted-nvr
        - name: scrypted-data
          persistentVolumeClaim:
            claimName: scrypted-data
      nodeSelector:
        nvidia.com/gpu.present: "true"
