kubernetes/cluster/smart-home/scrypted/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrypted
  namespace: smart-home
  labels:
    app.kubernetes.io/name: scrypted
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  rules:
    - host: nvr.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: scrypted
                port:
                  number: 10443
  tls:
    - hosts:
        - nvr.brhd.io
